--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         node-version: 16.x
         cache: 'npm'
+    - run: npm install
     - run: npm run doc
     - name: update readme
       uses: EndBug/add-and-commit@v9
